src/test/deca/context/invalid/homemade/this_in_main_decompile.res
{
	int x = 2;
	(this.x = 3);
}
